[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TONY"
version = "0.1.0"
description = "TONY - NLP tools for mental health"
requires-python = ">=3.9"
dependencies = [
    "transformers",
    "torch",
    "pandas",
    "numpy",
    "sentence-transformers",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["TONY*"]
