[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TONY"
version = "0.1.0"
description = "TONY - NLP tools for mental health"
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "pandas",
    "numpy",
    "sentence-transformers",
    "plotly",
    "tqdm",
    "scikit-learn",
    "spacy>=3.8.0",
    "nltk",
    "gensim",
    "keybert",
    "textblob",
    "NRCLex",
    "umap-learn",
    "datasets",
    "accelerate",
    "seaborn",
    "matplotlib",
    "wordfreq", 
    "dadapy"
]

[project.optional-dependencies]
mlx = ["mlx-lm"]

[tool.setuptools.packages.find]
where = ["."]
include = ["TONY*"]

[tool.setuptools.package-data]
"TONY.SAE" = ["*.json", "*.pt"]

